Organización de estilos y refactorización de nombres de componentes

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<div class="container">
+    <div class="card m-3">
+        <div class="card-body">
+            <h1 class="card-title">Bienvenido a la aplicación de gestión de reservas para el restaurante amigable con las mascotas</h1>
+            <p>Aquí encontrarás todas las herramientas necesarias para generar, cancelar y listar reservas. Haz clic en cualquiera de los vínculos de la parte superior para empezar una tarea</p>
+        </div>
+    </div>
+</div>
