--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,2 +1,3 @@
-<h1>Angular Seed</h1>
-<div class="more"></div>
+<header class="navbar navbar-expand-md bg-primary text-white">
+    <h1>Restaurante amigable con tus mascotas 🐶</h1>
+</header>
