--- a/src/app/shared/directivas/error-campos/componente/error-campos-plantilla.component.html
+++ b/src/app/shared/directivas/error-campos/componente/error-campos-plantilla.component.html
@@ -1,1 +1,1 @@
-<span [class.hide]="ocultar" style="color: red;" [innerHtml]="mensajeError"></span>
+<span [class.hide]="ocultar" style="color: #dc3545;" [innerHtml]="mensajeError"></span>
