Agregar alertas de información para cada tarea

--- a/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
+++ b/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
@@ -1,16 +1,19 @@
 <div class="container">
   <h1>Cancelar Reserva</h1>
-  <h3>Ingrese el id de la reserva a cancelar</h3>
+  <h3>Ingresa el código de la reserva a cancelar</h3>
   <div class="card">
     <div class="card-body">
+      <div *ngIf="mensaje" class="row m-3 position-relative">
+        <app-alerta [mensaje]="mensaje" [tipo]="tipoMensaje"></app-alerta>
+      </div>
       <form [formGroup]="cancelarReservaForm" (ngSubmit)="cancelar()">
-        <div class="row">
+        <div class="row m-3">
           <div class="col-sm-2">
-            <label>Id de reserva:</label>
+            <label>Código de reserva:</label>
           </div>
           <div class="col-sm-4">
-            <input validar type="text" id="idReserva" name="id" class="form-control"
-              formControlName="id">
+            <input validar type="text" id="codigoReserva" name="codigo" class="form-control"
+              formControlName="codigo">
           </div>
         </div>
         <button class="btn btn-primary" type="submit" [disabled]="!cancelarReservaForm.valid">Cancelar reserva</button>
