--- a/src/app/feature/reserva/components/reservar/reservar.component.html
+++ b/src/app/feature/reserva/components/reservar/reservar.component.html
@@ -7,7 +7,7 @@
         <app-alerta [mensaje]="mensaje" [tipo]="tipoMensaje"></app-alerta>
       </div>
       <div class="col">
-        <form [formGroup]="reservaForm" (ngSubmit)="crear()">
+        <form [formGroup]="reservaForm" (ngSubmit)="reservar()">
           <div class="row justify-content-center m-3">
             <div class="col">
               <label>Número de mesa:</label>
@@ -77,7 +77,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Aquí puedes registrar una mascota si el cliente nunca ha traído una</h5>
-            <form [formGroup]="mascotaForm" (ngSubmit)="crearMascota()">
+            <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()">
               <div class="row justify-content-center m-3">
                 <div class="col">
                   <label>Nombre de la mascota:</label>
