--- a/src/app/feature/reserva/components/reserva/reserva.component.html
+++ b/src/app/feature/reserva/components/reserva/reserva.component.html
@@ -2,7 +2,8 @@
   <div class="container">
     <a class="nav-link active" id="linkReservar" routerLink="./reservar" routerLinkActive="active">Reservar</a>
     <a class="nav-link active" id="linkCancelarReserva" routerLink="./cancelar" routerLinkActive="active">Cancelar reserva</a>
-    <a class="nav-link active" id="linkListarReserva" routerLink="./listar" routerLinkActive="active">Listar reservas</a>
+    <a class="nav-link active" id="linkListarReservas" routerLink="./listar" routerLinkActive="active">Listar reservas</a>
+    <a class="nav-link active" id="linkMostrarReservas" routerLink="./mostrar" routerLinkActive="active">Mostrar detalles de una reserva</a>
   </div>
 </nav>
 <router-outlet></router-outlet>
