--- a/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
+++ b/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
@@ -3,8 +3,8 @@
   <h3>Ingresa el código de la reserva a cancelar</h3>
   <div class="card">
     <div class="card-body">
-      <div *ngIf="mensaje" class="row m-3 position-relative">
-        <app-alerta [mensaje]="mensaje" [tipo]="tipoMensaje"></app-alerta>
+      <div *ngIf="alerta" class="row m-3 position-relative">
+        <app-alerta [mensaje]="alerta.mensaje" [tipo]="alerta.tipoMensaje"></app-alerta>
       </div>
       <form [formGroup]="cancelarReservaForm" (ngSubmit)="cancelar()">
         <div class="row m-3">
