--- a/src/app/feature/reserva/components/reservar/reservar.component.html
+++ b/src/app/feature/reserva/components/reservar/reservar.component.html
@@ -3,8 +3,8 @@
   <h3>Completa el formulario con los datos de la reserva</h3>
   <div class="card">
     <div class="row card-body">
-      <div *ngIf="mensaje" class="row m-3 position-relative">
-        <app-alerta [mensaje]="mensaje" [tipo]="tipoMensaje"></app-alerta>
+      <div *ngIf="alerta" class="row m-3 position-relative" id="alerta">
+        <app-alerta [mensaje]="alerta.mensaje" [tipo]="alerta.tipoMensaje"></app-alerta>
       </div>
       <div class="col">
         <form [formGroup]="reservaForm" (ngSubmit)="reservar()">
@@ -56,7 +56,7 @@
 
           <div class="row justify-content-center m-3">
             <div class="col-sm-3">
-              <button class="btn btn-primary" type="submit" [disabled]="!reservaForm.valid">Registrar reserva</button>
+              <button class="btn btn-primary" type="submit" id="reservar" [disabled]="!reservaForm.valid">Reservar</button>
             </div>
           </div>
 
@@ -77,7 +77,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Aquí puedes registrar una mascota si el cliente nunca ha traído una</h5>
-            <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()">
+            <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()" id="formularioMascota">
               <div class="row justify-content-center m-3">
                 <div class="col">
                   <label>Nombre de la mascota:</label>
