Hacer formularios responsivos con Bootstrap

--- a/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
+++ b/src/app/feature/reserva/components/listar-reserva/listar-reserva.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div id="reservas">
     <ul class="reservas row g-2 list-unstyled" id="listaReservas">
-      <li *ngFor="let reserva of listaReservas" class="col-4">
+      <li *ngFor="let reserva of listaReservas" class="col-12 col-sm-4">
         <div class="card">
           <div class="card-body">
             <p>ID de reserva: {{reserva.id}}</p>
