--- a/src/app/feature/reserva/components/reservar/reservar.component.html
+++ b/src/app/feature/reserva/components/reservar/reservar.component.html
@@ -9,7 +9,7 @@
       <div class="col">
         <form [formGroup]="reservaForm" (ngSubmit)="reservar()">
           <div class="row justify-content-center m-3">
-            <div class="col">
+            <div class="col-lg">
               <label>Número de mesa:</label>
             </div>
             <div class="col">
@@ -18,7 +18,7 @@
             </div>
           </div>
           <div class="row justify-content-center m-3">
-            <div class="col">
+            <div class="col-lg">
               <label>Fecha:</label>
             </div>
             <div class="col">
@@ -27,7 +27,7 @@
             </div>
           </div>
           <div class="row justify-content-center m-3">
-            <div class="col">
+            <div class="col-lg">
               <label>Nombre del cliente:</label>
             </div>
             <div class="col">
@@ -36,7 +36,7 @@
             </div>
           </div>
           <div class="row justify-content-center m-3">
-            <div class="col">
+            <div class="col-lg">
               <label>Teléfono del cliente:</label>
             </div>
             <div class="col">
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div *ngIf="incluyeMascota" class="row justify-content-center m-3">
-            <div class="col">
+            <div class="col-lg">
               <label>ID de la mascota:</label>
             </div>
             <div class="col">
@@ -79,7 +79,7 @@
             <h5 class="card-title">Aquí puedes registrar una mascota si el cliente nunca ha traído una</h5>
             <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()" id="formularioMascota">
               <div class="row justify-content-center m-3">
-                <div class="col">
+                <div class="col-lg">
                   <label>Nombre de la mascota:</label>
                 </div>
                 <div class="col">
@@ -88,7 +88,7 @@
                 </div>
               </div>
               <div class="row justify-content-center m-3">
-                <div class="col">
+                <div class="col-lg">
                   <label>Especie de la mascota:</label>
                 </div>
                 <div class="col">
@@ -100,7 +100,7 @@
                 </div>
               </div>
               <div class="row justify-content-center m-3">
-                <div class="col">
+                <div class="col-lg">
                   <label>Edad de la mascota:</label>
                 </div>
                 <div class="col">
