--- a/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
+++ b/src/app/feature/reserva/components/cancelar-reserva/cancelar-reserva.component.html
@@ -3,7 +3,7 @@
   <h3>Ingresa el código de la reserva a cancelar</h3>
   <div class="card">
     <div class="card-body">
-      <div *ngIf="alerta" class="row m-3 position-relative">
+      <div *ngIf="alerta" class="row m-3 position-relative" id="alerta">
         <app-alerta [mensaje]="alerta.mensaje" [tipo]="alerta.tipoMensaje"></app-alerta>
       </div>
       <form [formGroup]="cancelarReservaForm" (ngSubmit)="cancelar()">
@@ -16,7 +16,7 @@
               formControlName="codigo">
           </div>
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!cancelarReservaForm.valid">Cancelar reserva</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!cancelarReservaForm.valid" id="cancelarReserva">Cancelar reserva</button>
       </form>
     </div>
   </div>
