--- a/src/app/feature/reserva/components/mostrar-reserva/mostrar-reserva.component.html
+++ b/src/app/feature/reserva/components/mostrar-reserva/mostrar-reserva.component.html
@@ -3,7 +3,7 @@
   <h3>Ingresa el código de la reserva a mostrar</h3>
   <div class="card">
     <div class="card-body">
-      <div *ngIf="alerta" class="row m-3 position-relative">
+      <div *ngIf="alerta" class="row m-3 position-relative" id="alerta">
         <app-alerta [mensaje]="alerta.mensaje" [tipo]="alerta.tipoMensaje"></app-alerta>
       </div>
       <form [formGroup]="mostrarReservaForm" (ngSubmit)="mostrar()">
@@ -16,10 +16,10 @@
               formControlName="codigo">
           </div>
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!mostrarReservaForm.valid">Mostrar reserva</button>
+        <button class="btn btn-primary" type="submit" [disabled]="!mostrarReservaForm.valid" id="mostrarReserva">Mostrar reserva</button>
       </form>
 
-      <div *ngIf="reserva" class="m-3">
+      <div *ngIf="reserva" class="m-3" id="reserva">
         <div class="card">
           <div class="card-body">
             <p>ID de reserva: {{reserva.id}}</p>
