Probar funcionalmente camino feliz reserva con mascota y descuento, listar reservas, mostrar una reserva con código y eliminar la reserva

--- a/src/app/feature/reserva/components/reservar/reservar.component.html
+++ b/src/app/feature/reserva/components/reservar/reservar.component.html
@@ -108,7 +108,7 @@
                     class="form-control" formControlName="edad">
                 </div>
               </div>
-              <button class="btn btn-primary" type="submit" [disabled]="!mascotaForm.valid">Registrar mascota</button>
+              <button class="btn btn-primary" type="submit" [disabled]="!mascotaForm.valid" id="registrarMascota">Registrar mascota</button>
             </form>
           </div>
         </div>
