Mostrar TCRM en pantalla principal

--- a/src/app/feature/home/home.component.html
+++ b/src/app/feature/home/home.component.html
@@ -3,6 +3,7 @@
         <div class="card-body">
             <h1 class="card-title">Bienvenido a la aplicación de gestión de reservas para el restaurante amigable con las mascotas</h1>
             <p>Aquí encontrarás todas las herramientas necesarias para generar, cancelar y listar reservas. Haz clic en cualquiera de los vínculos de la parte superior para empezar una tarea</p>
+            <p class="text-center fw-bold">Por cierto, la TCRM para hoy es {{tcrm}} pesos colombianos</p>
         </div>
     </div>
 </div>
