--- a/src/app/feature/reserva/components/reservar/reservar.component.html
+++ b/src/app/feature/reserva/components/reservar/reservar.component.html
@@ -104,7 +104,7 @@
                   <label>Edad de la mascota:</label>
                 </div>
                 <div class="col">
-                  <input validar type="number" id="edadMascota" name="edadMascota" placeholder="Edad de la mascota"
+                  <input validar type="number" id="edadMascota" name="edadMascota" min="0"
                     class="form-control" formControlName="edad">
                 </div>
               </div>
